crates/batuta-tui/tests/snapshots/detail_run__run_detail_3_generations_120x40.snap
---
source: crates/batuta-tui/tests/detail_run.rs
expression: screen
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                                                 "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                                           "
"┌[1] Sessions · batuta─────────────────────────┐┌[4] Run · looprun-parent──────────────────────────────────────────────┐"
"│no sessions — press n to start one            ││looprun-parent · batuta-deliver · running · gen 3                     │"
"│                                              ││started 20:05:52  last progress 22:46:28  parent looprun-root         │"
"│                                              ││inputs  auto_commit=true  slug=mvp-tui                                │"
"│                                              ││generation 1                                                          │"
"│                                              ││generation 2                                                          │"
"│                                              ││generation 3                                                          │"
"│                                              ││  ●  implement-3  item 2  attempt 3                                   │"
"│                                              ││      → looprun-child  session sess-node                              │"
"│                                              ││      claude/sonnet                                                   │"
"│                                              ││events                                                                │"
"│                                              ││p pause  u resume  k kill  Enter open  a/x gate  L logs               │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘│                                                                      │"
"┌[2] Deliver runs · batuta-deliver─────────────┐│                                                                      │"
"│no runs for batuta-deliver — press * for all  ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘│                                                                      │"
"┌[3] Attention (0)─────────────────────────────┐│                                                                      │"
"│nothing needs attention                       ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"1-4 focus  Tab/Shift+Tab next/previous  w workspace  L logs  ?/F1 help  q/Ctrl+C quit  p/u/k/a/x/Enter control/open     "
