crates/batuta-tui/tests/snapshots/detail_run__run_detail_events_100x30.snap
---
source: crates/batuta-tui/tests/detail_run.rs
expression: "render(&model, 100, 30)"
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                             "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions · batuta─────────────────┐┌[4] Run · looprun-parent──────────────────────────────────┐"
"│no sessions — press n to start one    ││looprun-parent · batuta-deliver · running · gen 1         │"
"│                                      ││started 20:05:52  last progress 22:46:28  parent looprun-r│"
"│                                      ││inputs  auto_commit=true  slug=mvp-tui                    │"
"│                                      ││generation 1                                              │"
"│                                      ││  ●  implement-1  item 0  attempt 1                       │"
"│                                      ││      → looprun-child  session sess-node                  │"
"│                                      ││      claude/sonnet                                       │"
"│                                      ││events                                                    │"
"│                                      ││  20:05:52 node_running  load                             │"
"└──────────────────────────────────────┘│  20:05:52 node_succeeded  load                           │"
"┌[2] Deliver runs · batuta-deliver─────┐│  20:05:52 status_changed  running                        │"
"│no runs for batuta-deliver — press * f││  20:05:52 generation_started  gen 2                      │"
"│                                      ││  ? gate gate-ab12 (rev 2)  a approve · x reject          │"
"│                                      ││  20:05:52 future_event                                   │"
"│                                      ││p pause  u resume  k kill  Enter open  a/x gate  L logs   │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘│                                                          │"
"┌[3] Attention (0)─────────────────────┐│                                                          │"
"│nothing needs attention               ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"1-4 focus  Tab/Shift+Tab next/previous  w workspace  L logs  ?/F1 help  q/Ctrl+C quit  p/u/k/a/x/Ent"
