crates/batuta-tui/tests/snapshots/detail_run__run_detail_gate_120x40.snap
---
source: crates/batuta-tui/tests/detail_run.rs
expression: "render(&model, 120, 40)"
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                                                 "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                                           "
"┌[1] Sessions · all sessions───────────────────┐┌[4] Run · looprun-parent──────────────────────────────────────────────┐"
"│no sessions — press n to start one            ││looprun-parent · batuta-deliver · running · gen 1                     │"
"└──────────────────────────────────────────────┘│started 20:05:52  last progress 22:46:28  parent looprun-root         │"
"┌[2] Deliver runs · batuta-deliver─────────────┐│inputs  auto_commit=true  slug=mvp-tui                                │"
"│no runs for batuta-deliver — press * for all  ││generation 1                                                          │"
"└──────────────────────────────────────────────┘│  ●  implement-1  item 0  attempt 1                                   │"
"┌[3] Attention (0)─────────────────────────────┐│      → looprun-child  session sess-node                              │"
"│nothing needs attention                       ││      claude/sonnet                                                   │"
"└──────────────────────────────────────────────┘│events                                                                │"
"                                                │  ? gate gate-ab12 (rev 2)  a approve · x reject                      │"
"                                                │p pause  u resume  k kill  Enter open  a/x gate  L logs               │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                │                                                                      │"
"                                                └──────────────────────────────────────────────────────────────────────┘"
"1-4 focus  Tab/Shift+Tab next/previous  w workspace  L logs  ?/F1 help  q/Ctrl+C quit  p/u/k/a/x/Enter control/open     "
